--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,3 +64,9 @@ jobs:
           git commit -m "Update rules"
           git push
         fi
+    - name: Publish new release for all files in rule_srs
+      uses: softprops/action-gh-release@v2
+      with:
+          make_latest: "true"
+          files: ./rule_srs/*.srs
+        
