--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Publish new release for all files in rule_srs
       uses: softprops/action-gh-release@v2
       with:
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.sha }}-{{ github.event_id }}
           make_latest: "true"
           files: ./rule_srs/*.srs
         
